--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
   },
   "homepage": "https://github.com/Erangamadhushan/express-advanced-error-kit#readme",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.6",
+    "@semantic-release/npm": "^13.1.4",
     "@types/express": "^5.0.6",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "semantic-release": "^25.0.3",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   }
