--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -34,8 +35,14 @@
     "@semantic-release/github": "^12.0.6",
     "@semantic-release/npm": "^13.1.4",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
     "conventional-changelog-conventionalcommits": "^9.1.0",
+    "express": "^5.2.1",
+    "jest": "^30.2.0",
     "semantic-release": "^25.0.3",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   }
