--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "url": "https://github.com/Erangamadhushan/express-advanced-error-kit/issues"
   },
   "homepage": "https://github.com/Erangamadhushan/express-advanced-error-kit#readme",
+  "peerDependencies": {
+    "zod": "^3.0.0"
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -44,7 +47,8 @@
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsup": "^8.5.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^3.0.0"
   },
   "dependencies": {
     "zod": "^4.3.6"
