--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "types": ["node", "jest"]
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
